--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,14 +1,9 @@
-platform :ios, '8.0'
+platform :ios, '11.0'
 
 use_frameworks!
 
 target 'EFAutoScrollLabel_Example' do
-    pod 'SnapKit', :git => 'https://github.com/alanzeino/SnapKit.git', :branch => 'xcode102'
     pod 'EFAutoScrollLabel', :path => '../'
 
-    target 'EFAutoScrollLabel_Tests' do
-        inherit! :search_paths
-
-        
-    end
+    pod 'SnapKit', '5.6.0'
 end
